   to strings and file-like objects (ticket #69).
 * Improve handling of incorrectly nested tags in the HTML parser.
 * Template includes can now be nested inside fallback content.
 * Expressions can now contain dict literals (ticket #37).
 * It is now possible to have one or more escaped dollar signs in front of a 
   full expression (ticket #92).


Version 0.3.6
http://svn.edgewall.org/repos/genshi/tags/0.3.6/
(Dec 11 2006, from branches/stable/0.3.x)

 * The builder API now accepts streams as children of elements and fragments.


Version 0.3.5
http://svn.edgewall.org/repos/genshi/tags/0.3.5/
(Nov 22 2006, from branches/stable/0.3.x)

 * Fix XPath traversal in match templates. Previously, `div/p` would be treated 
   the same as `div//p`, i.e. it would match all descendants and not just the
   immediate children.
 * Preserve whitespace in HTML `<pre>` elements also when they contain child
   elements.
 * Match templates no longer match their own output (ticket #77).
 * Blank lines before directives in text templates are now preserved as
   expected (ticket #62).


Version 0.3.4
http://svn.edgewall.org/repos/genshi/tags/0.3.4/
(Nov 2 2006, from branches/stable/0.3.x)

 * The encoding of HTML and XML files, as well as markup and text templates,
   can now be specified. Also, the encoding specified in XML declarations is
   now respected unless an expiclit encoding is requested.
 * Expressions used as arguments for `py:with`, `py:def`, and `py:for`
   directives can now contain non-ASCII strings.


Version 0.3.3
http://svn.edgewall.org/repos/genshi/tags/0.3.3/
(Oct 16 2006, from branches/stable/0.3.x)

 * Fixed bug introduced in 0.3.2 that broke the parsing of templates which
   declare the same namespace more than once in a nested fashion.
 * Fixed the parsing of HTML entity references inside attribute values, both
   in the `XMLParser` and the `HTMLParser` classes.
 * Some changes to usage of absolute vs. relative template paths to ensure that