@@ -34,6 +34,8 @@ http://svn.edgewall.org/repos/genshi/tags/0.4.0/
  * Expressions can now contain dict literals (ticket #37).
  * It is now possible to have one or more escaped dollar signs in front of a 
    full expression (ticket #92).
+ * The `Markup` class is now available by default in template expressions
+   (ticket #67).
 
 
 Version 0.3.6
